[package]
name = "game2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "=1.19.0"
piston = "0.54.0"
piston2d-graphics = "0.44.0"
piston2d-opengl_graphics = "0.83.0"
piston_window = "0.130.0"
pistoncore-glutin_window = "0.72.0"
pistoncore-sdl2_window = "0.69.0"
rand = "0.8.5"


[lib]
name = "game2048"
path = "src/lib.rs"
